# seven-segment-reporter

./: .gitignore  Makefile  README.md  enter-dev-ve
python/: AUTHORS  README  requirements.txt  setup.cfg  setup.py
python/reporter/: service.py
tools/: py-clean  py-in-venv  repo-fork-sync
