[metadata]
name = seven_segment_service_reporter
author = michael dye
author-email = m-github@divisive.info
summary = Systemd service unit uptime reporter on seven segment LED
url = https://github.com/michaeldye/seven_segment_service_reporter
description-file = README
license = proprietary
requires-python = 3
classifier =
    Development Status :: 3 - Alpha
keywords =
    setup
    distutils
[entry_points]
console_scripts =
    seven-segment-service-uptime = reporter.service:uptime
[files]
packages =
    reporter
[pbr]
warnerrors = True
[wheel]
universal = 1

# vim: set ts=4 sw=4 expandtab:
